add docker to project and readme

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 DATABASE_URL=mysql://root@localhost:3306/to_do_python
+# For Docker
+#DATA DATABASE_URL=mysql://teste:teste@localhost:3306/to_do_python
